[gd_scene load_steps=7 format=3 uid="uid://dt5icg7tcbwur"]

[ext_resource type="Script" path="res://Nodes/hkbB/Scripts/hkbBlenderGeneratorChildScene.gd" id="1_iw5ul"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_ej33v"]
[ext_resource type="Texture2D" uid="uid://csneaifgmkfng" path="res://Resources/Icons/PaintButtonAlpha.png" id="4_83k7l"]
[ext_resource type="Texture2D" uid="uid://bh1i3gursfdn1" path="res://Resources/Icons/PinButtonAlpha.png" id="5_67hks"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_o0hy0"]
[ext_resource type="Texture2D" uid="uid://b3jqrjqx6enly" path="res://Resources/Icons/UnpinButtonAlpha.png" id="6_4myb8"]

[node name="hkbBlenderGeneratorChild" type="GraphNode"]
offset_right = 220.0
offset_bottom = 180.0
title = "hkbBlenderGeneratorChild"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_iw5ul")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="variableBindingSet" type="Label" parent="."]
layout_mode = 2
text = "variableBindingSet"
horizontal_alignment = 2

[node name="generator" type="Label" parent="."]
layout_mode = 2
text = "generator"
horizontal_alignment = 2

[node name="boneWeights" type="Label" parent="."]
layout_mode = 2
text = "boneWeights"
horizontal_alignment = 2

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(496, 111)
borderless = false

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 492.0
offset_bottom = 175.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_ej33v")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   hkbBlenderGeneratorChild"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PaintButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
text = "      "

[node name="BrushIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PaintButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_83k7l")
stretch_mode = 2

[node name="PinButton" type="Button" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
text = "      "

[node name="PinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_67hks")
stretch_mode = 2

[node name="UnpinIcon" type="TextureRect" parent="DataPopupPanel/VBoxContainer/BaseNode/PinButton"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4myb8")
stretch_mode = 2

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_o0hy0")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="weight" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/weight"]
layout_mode = 2
text = "   weight"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/weight"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="weightLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/weight"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[node name="worldFromModelWeight" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/worldFromModelWeight"]
layout_mode = 2
text = "   worldFromModelWeight"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/worldFromModelWeight"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="worldFromModelWeightLine" type="LineEdit" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/worldFromModelWeight"]
custom_minimum_size = Vector2(180, 30)
layout_mode = 2
text = "1.0"
placeholder_text = "1.0"
alignment = 2
max_length = 20

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/PaintButton" to="." method="_on_paint_button_pressed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/weight/weightLine" to="." method="_on_weight_line_text_changed"]
[connection signal="text_changed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/worldFromModelWeight/worldFromModelWeightLine" to="." method="_on_world_from_model_weight_line_text_changed"]
